# MotorPropSelector

./: CMakeLists.txt  README.md  dq_ts_curve.py  main.py  r_est.py  ts_curve.py
Qprop/src/: Makefile
extra/: HillMarineWeedless12.25x10.xcf  HillMarineWeedless12.25x10_MASTER.xcf
fluids/fresh_water/: qcon.def
include/: units.h
include/geom/: chord.h  constants.h  polar.h  position.h  trig.h
include/geom/units/: meter.h  radian.h
include/img/: mask.h  px.h
include/img/boundary/: ray.h
include/img/conversions/: px_to_m.h
include/img/coords/: px_pos.h
include/img/extract/: blade_rect_from_mask.h  chord_dist_from_rect.h
include/img/scan/: classification_aggregator.h  local_occupancy_mask.h  px_classifier.h  radial_scan.h  refine_blade_radius.h  ring_scan.h  scan_res.h  sector_sweep.h  term_policy.h
include/math/: constants.h  floating_point.h
include/prop/planform/: chord.h  image_to_chord_dist.h
include/unit/: convert.h  math.h  rep_cast.h  rep_cast_policy.h  traits.h  unit.h
include/unit/detail/: rep_caster.h
include/units/: radian.h
include/utils/: linspace.h  num_type.h  trig_info.h
motors/: motor.py  motors.py
plotter/: motor_speed_plotter.py
propellers/: prop.py  props.py  wageningen_coeffs.py
src/: CMakeLists.txt  image_to_chord_dist_cl_tool.cpp
src/sandbox/opencv/: blur_border_constant.cpp  deref_line_iterator.cpp  mat_reference_semantics.cpp  point_types.cpp  px_access.cpp
tests/: CMakeLists.txt
tests/scan/: test_local_occupancy_mask.cpp
